# github-C2

./: .gitignore  README.md
agent/: Cargo.toml  build.rs
agent/rootkit/: Makefile  main.c
agent/src/: backup_config.rs  commands.rs  crypto.rs  files.rs  filetransfer.rs  linux_sensitive.rs  main.rs  persist.rs  rootkit.rs  scan.rs  selfdel.rs  sysinfo.rs  timewindow.rs  uuid_gen.rs
cli-controller/: Cargo.toml  build.rs
cli-controller/src/: app.rs  crypto.rs  db.rs  github.rs  main.rs
cli-generator/: Cargo.toml
cli-generator/src/: main.rs
