[package]
name = "gui-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
rand = "0.8"

[[bin]]
name = "gui-controller"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
